--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: TNGM Demo
-description: TNGM flora info for TNGM
+description: TNGM flora info
 show_downloads: false
